fix(VRadioGroup): overwrite inherited padding and vertical align label
fixes #10334

--- a/packages/vuetify/src/components/VRadioGroup/VRadioGroup.sass
+++ b/packages/vuetify/src/components/VRadioGroup/VRadioGroup.sass
@@ -2,6 +2,10 @@
 @import '../../styles/styles.sass'
 
 .v-input--radio-group
+  legend
+    align-self: center
+    display: inline-block
+
   &__input
     border: none
     display: flex
